--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,6 @@
+title: Minimal theme
+logo: /assets/img/logo.png
+description: Minimal Theme for GitHub Pages.
+show_downloads: true
 theme: jekyll-theme-minimal
-logo: ./assets/img/logo.png
+
