--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 title: SRYA extractor
-logo: ../assets/img/logo.png
+logo: https://github.com/NovisEuforia/SRYA_extractor/blob/master/assests/img/logo.jpg
 description: IDR for the R&A framework
 google_analytics: 
 show_downloads: true
